--- a/style/style.scss
+++ b/style/style.scss
@@ -1,3 +1,9 @@
+@import "base/color";
+
+.ahc {
+	width: 100%;
+	height: 100%;
+}
 .flex{
 	display: flex;
 	align-items: center;
@@ -35,5 +41,40 @@
 .card{
 	.popup-content{
 		width: 40%;
+	}
+}
+
+/**
+ * 边框长度变化 -- pageEffects/component/effect2
+ */
+.border1 {
+	position: relative;
+	border: 1px solid $border1;
+	&::before,
+	&::after {
+		content: '';
+		position: absolute;
+		width: 10%;
+		height: 10%;
+		transition: 0.3s ease-in-out;
+	}
+	&::before {
+		top: -5px;
+		left: -5px;
+		border-top: 1px solid $border1;
+		border-left: 1px solid $border1;
+	}
+	&::after {
+		bottom: -5px;
+		right: -5px;
+		border-bottom: 1px solid $border1;
+		border-right: 1px solid $border1;
+	}
+}
+.border1-active {
+	&::before,
+	&::after {
+		width: calc(100% + 9px);
+		height: calc(100% + 9px);
 	}
 }
