新增边框特效

--- a/style/style.scss
+++ b/style/style.scss
@@ -1,8 +1,10 @@
 @import "base/color";
+@import "base/border";
 
 .ahc {
 	width: 100%;
 	height: 100%;
+	color: #222222;
 }
 .flex{
 	display: flex;
@@ -43,152 +45,4 @@
 		width: 40%;
 	}
 }
-
-/**
- * 边框长度变化 -- pageEffects/component/effect2
- */
-.border2 {
-	position: relative;
-	border: 1px solid $border1;
-	&::before,
-	&::after {
-		content: '';
-		position: absolute;
-		width: 10%;
-		height: 10%;
-		transition: 0.3s ease-in-out;
-	}
-	&::before {
-		top: -5px;
-		left: -5px;
-		border-top: 1px solid $border1;
-		border-left: 1px solid $border1;
-	}
-	&::after {
-		bottom: -5px;
-		right: -5px;
-		border-bottom: 1px solid $border1;
-		border-right: 1px solid $border1;
-	}
-}
-.border2-active {
-	&::before,
-	&::after {
-		width: calc(100% + 9px);
-		height: calc(100% + 9px);
-	}
-}
-
-/**
- * 虚拟边框动画 -- pageEffects/component/effect3
- */
-.border3 {
-	outline: 1px solid #333;
-	outline-offset: -1px;
-	background:
-		linear-gradient(90deg, #333 50%, transparent 0) repeat-x,
-		linear-gradient(90deg, #333 50%, transparent 0) repeat-x,
-		linear-gradient(0deg, #333 50%, transparent 0) repeat-y,
-		linear-gradient(0deg, #333 50%, transparent 0) repeat-y;
-	background-size: 4px 1px, 4px 1px, 1px 4px, 1px 4px;
-	background-position: 0 0, 0 100%, 0 0, 100% 0;
-}
-.border3-active {
-	outline: none;
-	animation: linearGradientMove .3s infinite linear;
-}
-@keyframes linearGradientMove {
-	100% {
-		background-position: 4px 0, -4px 100%, 0 -4px, 100% 4px;
-	}
-}
-
-/**
- * 多色彩边框旋转动画 -- pageEffects/component/effect4
- */
-.border4 {
-	position: relative;
-	overflow: hidden;
-	border-radius: 5px;
-	&::before {
-		content: '';
-		position: absolute;
-		left: -50%;
-		top: -50%;
-		z-index: -2;
-		width: 200%;
-		height: 200%;
-		animation: windmillRotate 4s linear infinite;
-		background-repeat: no-repeat;
-		background-size: 50% 50%, 50% 50%;
-		background-position: 0 0, 100% 0, 100% 100%, 0 100%;
-		background-image: 
-			linear-gradient(#399953, #399953),
-			linear-gradient(#fbb300, #fbb300),
-			linear-gradient(#d53e33, #d53e33),
-			linear-gradient(#377af5, #377af5);
-	}
-	&::after {
-		content: '';
-		position: absolute;
-		left: 3px;
-		top: 3px;
-		z-index: -1;
-		width: calc(100% - 6px);
-		height: calc(100% - 6px);
-		border-radius: 5px;
-		background: #FFFFFF;
-		animation: border4Opacity 4s infinite alternate;
-	}
-}
-@keyframes windmillRotate {
-	100% {
-		transform: rotate(360deg);
-	}
-}
-@keyframes border4Opacity {
-	50% {
-		opacity: 1;
-	}
-	100% {
-		opacity: 0;
-	}
-}
-
-/**
- * 扫描旋转动画 -- pageEffects/component/effect5
- */
-.border5 {
-	position: relative;
-	overflow: hidden;
-	border-radius: 5px;
-	&::before {
-		content: '';
-		position: absolute;
-		left: -50%;
-		top: -50%;
-		z-index: -2;
-		width: 200%;
-		height: 200%;
-		animation: windmillRotate 3s linear infinite;
-		background-repeat: no-repeat;
-		background-size: 50% 50%, 50% 50%;
-		background-position: 0 0, 100% 0, 100% 100%, 0 100%;
-		background-image: 
-			linear-gradient(#399953, #399953);
-	}
-	&::after {
-		content: '';
-		position: absolute;
-		left: 3px;
-		top: 3px;
-		z-index: -1;
-		width: calc(100% - 6px);
-		height: calc(100% - 6px);
-		border-radius: 5px;
-		background: #FFFFFF;
-		animation: border4Opacity 2s infinite alternate;
-	}
-}
-
 
